# KGB_Bot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
deploy/: RUNBOOK.md  deploy.sh  secretary-bot.service  secretary-bot.user.service
docs/plans/: 2026-06-17-001-feat-telegram-knowledge-bot-plan.md
src/secretary_bot/: __init__.py  __main__.py  config.py  documents.py  logging.py
src/secretary_bot/db/: database.py  repositories.py  schema.sql
src/secretary_bot/knowledge/: storage.py  vector.py
src/secretary_bot/llm/: client.py
src/secretary_bot/pipeline/: consolidate.py  extract.py  import_export.py  runner.py  scheduler.py  segment.py  triage.py
src/secretary_bot/qa/: answer.py
src/secretary_bot/telegram/: access.py  admin.py  bot.py  commands.py  ingest.py
tests/: test_access.py  test_admin.py  test_answer.py  test_commands.py  test_config.py  test_consolidate.py  test_database.py  test_documents.py  test_extract.py  test_import_export.py  test_ingest.py  test_repositories.py  test_runner.py  test_scheduler.py  test_segment.py  test_storage.py  test_triage.py  test_vector.py
